--- a/public/assets/i18n/translations/sk.json
+++ b/public/assets/i18n/translations/sk.json
@@ -1,5 +1,7 @@
 {
   "about_me" : "O mne",
+
+
   "my_projects": "Moje projekty",
   "visit_page": "NAVŠTÍVIŤ",
   "source_code": "Zdrojový kód",
@@ -8,5 +10,7 @@
   "proofs_description": "Plno prapodivých dôkazov nadprirodzena.",
   "slovnik_description": "Offline slovník cudzích slov slovenského jazyka.",
   "rnm_description": "Demo aplikácia so zoznamom postaváv, lokácií a epizód zo serálu.",
-  "notes_description": "Demo aplikácia s vlastým (DEMO) backendom na poznámky."
+  "notes_description": "Demo aplikácia s vlastým (DEMO) backendom na poznámky.",
+
+  "404": "Toto nie je stránka ktorú hľadáte."
 }
