Updates - fix my grammar

--- a/assets/i18n/translations/sk.json
+++ b/assets/i18n/translations/sk.json
@@ -20,9 +20,9 @@
   "skills": "Zručnosti",
   "major_languages": "Hlavné jazyky",
   "minor_languages": "Vedľajšie jazyky",
-  "fancy": "Ďalšie veselé slová ktoré sa dotiahli na zoznam mojich zručností:",
+  "fancy": "Ďalšie veselé slová, ktoré sa dotiahli na zoznam mojich zručností:",
 
-  "last_words": "Som človek ktorý má rád popkultúru, hudbu atď. Takisto hrám na gitare a\u00A0preferujem GIMP (namiesto Photoshopu) ... kontoroverzné ... ja viem.",
+  "last_words": "Som človek, ktorý má rád popkultúru, hudbu atď. Takisto hrám na gitare a\u00A0preferujem GIMP (namiesto Photoshopu) ... kontoroverzné ... ja viem.",
 
 
   "my_projects": "Moje projekty",
