--- a/public/assets/i18n/translations/sk.json
+++ b/public/assets/i18n/translations/sk.json
@@ -34,6 +34,8 @@
   "slovnik_description": "Offline slovník cudzích slov slovenského jazyka.",
   "rnm_description": "Demo aplikácia so zoznamom postaváv, lokácií a epizód zo serálu.",
   "notes_description": "Demo aplikácia s vlastým (DEMO) backendom na poznámky.",
+  "duels": "Jednoduchá hra pre dvoch, porovnáva reakčný čas hráčov. Používa PeerJS.",
+  "fallacies": "Niečo na zamyslenie z logicallyfallacious.com",
 
   "support": "Ak sa vám páčia moje projekty môžete mi kúpiť pivo.",
 
